--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="La Copa Argentum es la primera competencia de esports desarrollada con un juego argentino. Argentum Online, el juego multiplayer masivo que lleva más de dos décadas de historia, le regalará a su comunidad un evento deportivo sin precedentes, en el que competirán los seis mejores equipos de Argentina. El certamen comenzará el sábado 1° de mayo a las 20 hs, y la audiencia podrá seguir las partidas en vivo desde el canal oficial de Twitch de la Copa Argentum">
+    <meta name="keywords" content="COPA, ARGENTUM, AO, ESPORTS, ESPORTSAO">
     <title>AGITE AO</title>
     <link rel="stylesheet" href="scss/main.css">
     <script src="https://kit.fontawesome.com/8a815a169a.js" crossorigin="anonymous"></script>
@@ -13,7 +15,7 @@
     
     <header id="menu">         
         <nav>
-            <a href="index.html"><img src="img/iconao.png" class="logo" alt="logo" width="100" height="100"></a>
+            <a href="index.html"><img src="img/iconao.png" class="logo" alt="logoargentum" width="100" height="100"></a>
             <h1> AGITE AO </h1>
             <ul>
                 <li><a href="#">Inicio</a></li>
