--- a/index.html
+++ b/index.html
@@ -53,20 +53,17 @@
             </div>
             <div class="tipo-servicios">
                 <div>
-                    <i> Paladines </i>
-                    <h3>Diseño UX/UI</h3>
+                    <p><em> Paladines </em></P>
                     <p>
                         Prefieren predicar la palabra de su Dios mediante la espada. Son seres de una gran sabiduría, más nunca comparable a la del clérigo. Aman a sus dioses y dedican su entera vida a ellos. Hay paladines realmente adinerados y otros mucho más humildes. Por lo general, llevan su rol a extremos, pudiendo ser muy benévolos o realmente malvados. Esta clase tan poderosa y sabia, logró aprender un nuevo hechizo que hace inútil a la Descarga Eléctrica, la Tormenta Eléctrica.</p>
                 </div>
                 <div>
-                    <i> Druidas </i>
-                    <h3>Desarrollo WEB</h3>
+                    <p><em> Druidas </em></P>
                     <p>
                         Nacen y se crían en medio de la naturaleza. Tienen un nato rechazo a la ciudad y la civilización. Respetan a cada criatura existente, a cada animal, a cada árbol; y pueden con ellos comunicarse. Siempre que un druida tenga que entrar en combate, contará con el entero apoyo y ayuda de la naturaleza.</p>
                 </div>
                 <div>
-                    <i> Magos </i>
-                    <h3>Comercio Digital</h3>
+                    <p><em> Magos </em></P>
                     <p>
                         El mago es la clase mágica por excelencia. Teniendo un maná que no puede ser alcanzado por ninguna otra clase de estas tierras. Desencadenan poderosos hechizos sin descanso, su poder al combinarlos puede llegar a ser devastador, causando graves daños al oponente con muy poco esfuerzo. Esta clase es la única que puede aprender el Llamado a las sombras.</p>
                 </div>
